# enokiweave-node

./: .gitignore  Cargo.toml  Dockerfile  Makefile  ReadMe.md  docker-compose.yml
.github/workflows/: ci.yml
setup/: example_genesis_file.json  example_initial_peers_file.txt
src/: address.rs  blocklattice.rs  build-transaction.rs  confidential.rs  lib.rs  main.rs  node.rs  node_runner.rs  rpc.rs  transaction.rs  transaction_manager.rs
src/p2p/: behaviour.rs  config.rs  message.rs  mod.rs  node.rs
src/serialization/: signature.rs
src/utils/: logging.rs  mod.rs
tests/: p2p_network.rs
tests/common/: mod.rs  utils.rs
