[package]
name = "enokiweave"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
anyhow = "1.0.86"
chrono = "0.4.38"
hyper = "1.6.0"
libp2p = { version = "0.52", features = [
    "tokio",
    "mdns",
    "floodsub",
    "tcp",
    "noise",
    "yamux",
    "macros",
    "identify",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tokio = { version = "1.43", features = ["full"] }
uuid = { version = "1.13", features = ["v4", "serde"] }
disruptor = "0.2.1"
hex = { version = "0.4.3", features = ["serde"] }
tracing = "0.1.41"
tracing-attributes = "0.1.27"
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
lmdb = "0.8.0"
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
once_cell = "1.20.2"
tracing-subscriber = "0.3.19"
k256 = { version = "0.13.4", features = ["ecdh"] }
rand = "0.9.0"
rand_core = "0.9.0"
ark-ff = "0.5.0"


[[bin]]
name = "build-transaction"
path = "src/build-transaction.rs"
